--- a/resources.qmd
+++ b/resources.qmd
@@ -2,363 +2,33 @@
 title: "Resources"
 ---
 
-## Additional Learning Resources
+## Resources
 
-This page provides supplementary materials and resources to deepen your understanding of DataSHIELD and OMOP CDM beyond the workshop content.
+The following resources may be of interest for those wanting to learn more about DataSHIELD and OMOP CDM:
 
-### 📚 Essential Reading
+### DataSHIELD
+- [DataSHIELD Beginners Tutorial](https://data2knowledge.atlassian.net/wiki/spaces/DSDEV/pages/931069953/Beginners+Tutorial+DataSHIELD+v6.1)
+- [dsTidyverseClient vignette](https://cran.r-project.org/web/packages/dsTidyverseClient/vignettes/dstidyverse.html)
 
-::: {.row}
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-file-earmark-pdf resource-icon"></i>
+### Resources and Opal integration
+- [resourcer: Examples of resources](https://isglobal-brge.github.io/resource_bookdown/resourcer.html#examples-of-resources)
 
-#### DataSHIELD Publications
+### OHDSI / OMOP CDM
+- [The Book of OHDSI – Common Data Model](https://ohdsi.github.io/TheBookOfOhdsi/CommonDataModel.html)
+- [The Book of OHDSI – Standardized Vocabularies](https://ohdsi.github.io/TheBookOfOhdsi/StandardizedVocabularies.html)
 
-**Foundational Papers:**
-- [Gaye et al. (2014)](https://doi.org/10.1093/ije/dyu188) - DataSHIELD: taking the analysis to the data, not the data to the analysis
-- [Marcon et al. (2021)](https://doi.org/10.1186/s12874-021-01308-8) - Recent advances in DataSHIELD
-- [Wilson et al. (2017)](https://doi.org/10.1136/bmjopen-2017-019053) - DataSHIELD tutorial
+### dsOMOP
+- [dsOMOP website](https://isglobal-brge.github.io/dsOMOP/)
+- [dsOMOPClient vignette](https://isglobal-brge.github.io/dsOMOPClient/)
+- [dsOMOPHelper vignette](https://isglobal-brge.github.io/dsOMOPHelper/)
 
-**Technical Papers:**
-- Privacy-preserving data analysis methods
-- Federated learning in epidemiology
-- Statistical disclosure control
-:::
-:::
-
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-file-earmark-pdf resource-icon"></i>
-
-#### OMOP CDM Literature
-
-**Core Documentation:**
-- [The Book of OHDSI](https://ohdsi.github.io/TheBookOfOhdsi/) - Comprehensive guide to OHDSI and OMOP
-- [OMOP CDM v5.4 Specifications](https://ohdsi.github.io/CommonDataModel/)
-- [Vocabulary Documentation](https://www.ohdsi.org/web/wiki/doku.php?id=documentation:vocabulary)
-
-**Research Applications:**
-- Real-world evidence generation
-- Network studies methodology
-- Data quality frameworks
-:::
-:::
-:::
-
-### 🎥 Video Resources
-
-::: {.resource-card}
-<i class="bi bi-play-circle resource-icon"></i>
-
-#### Tutorial Videos & Webinars
-
-- **DataSHIELD Basics** - Introduction to federated analysis concepts
-- **OMOP CDM Deep Dive** - Understanding the common data model
-- **R Programming for DataSHIELD** - Advanced R techniques
-- **OHDSI Symposium Recordings** - Annual conference presentations
-- **Community Webinar Series** - Monthly educational sessions
-
-[Access Video Library →](https://www.datashield.org/videos)
-:::
-
-### 💻 Code & Tools
-
-::: {.row}
-::: {.col-md-4}
-::: {.resource-card}
-<i class="bi bi-github resource-icon"></i>
-
-#### GitHub Repositories
-
-**DataSHIELD:**
-- [dsBaseClient](https://github.com/datashield/dsBaseClient)
-- [dsBase](https://github.com/datashield/dsBase)
-- [DSI](https://github.com/datashield/DSI)
-
-**OMOP Tools:**
-- [OHDSI/CommonDataModel](https://github.com/OHDSI/CommonDataModel)
-- [OHDSI/WhiteRabbit](https://github.com/OHDSI/WhiteRabbit)
-- [OHDSI/Achilles](https://github.com/OHDSI/Achilles)
-:::
-:::
-
-::: {.col-md-4}
-::: {.resource-card}
-<i class="bi bi-code-square resource-icon"></i>
-
-#### R Packages
-
-**Analysis Packages:**
-```r
-# DataSHIELD ecosystem
-dsBaseClient
-dsModelling
-dsSurvival
-dsMediation
-
-# OMOP utilities
-DatabaseConnector
-SqlRender
-FeatureExtraction
-```
-:::
-:::
-
-::: {.col-md-4}
-::: {.resource-card}
-<i class="bi bi-terminal resource-icon"></i>
-
-#### Analysis Scripts
-
-**Example Workflows:**
-- Multi-site GLM analysis
-- Survival analysis template
-- Data harmonization scripts
-- Quality control pipelines
-
-[Download Templates →](#)
-:::
-:::
-:::
-
-### 🌐 Online Communities
-
-::: {.row}
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-people resource-icon"></i>
-
-#### DataSHIELD Community
-
-- **Official Website**: [datashield.org](https://www.datashield.org/)
-- **Discussion Forum**: Active Q&A community
-- **Slack Channel**: Real-time support
-- **Mailing List**: datashield-user@mrc-epid.cam.ac.uk
-- **Working Groups**: Join specialized teams
-
-**Monthly Events:**
-- Community calls (First Tuesday)
-- Technical workshops
-- User group meetings
-:::
-:::
-
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-globe resource-icon"></i>
-
-#### OHDSI Community
-
-- **Main Portal**: [ohdsi.org](https://www.ohdsi.org/)
-- **Forums**: [forums.ohdsi.org](https://forums.ohdsi.org/)
-- **MS Teams**: Global collaboration
-- **Regional Chapters**: Local networks
-- **Annual Symposium**: Global conference
-
-**Resources:**
-- Study protocols
-- Phenotype library
-- Network studies
-:::
-:::
-:::
-
-### 📖 Extended Learning
-
-::: {.resource-card}
-<i class="bi bi-mortarboard resource-icon"></i>
-
-#### Online Courses & MOOCs
-
-**Free Courses:**
-- **Introduction to DataSHIELD** - Self-paced online course
-- **OMOP CDM Fundamentals** - OHDSI Academy
-- **R for Epidemiologists** - Coursera
-- **Privacy-Preserving Analytics** - edX
-
-**Certification Programs:**
-- OHDSI Certified Data Engineer
-- DataSHIELD Administrator Certificate
-- Privacy and Ethics in Health Data
-
-**University Programs:**
-- MSc in Health Data Science
-- Graduate Certificate in Biomedical Informatics
-:::
-
-### 🔧 Useful Tools & Software
-
-::: {.row}
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-tools resource-icon"></i>
-
-#### ETL & Data Management
-
-- **WhiteRabbit**: Scan your data
-- **Rabbit-in-a-Hat**: Design ETL mappings
-- **Usagi**: Vocabulary mapping tool
-- **Data Quality Dashboard**: DQD
-- **ATLAS**: Cohort definition tool
-:::
-:::
-
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-shield-check resource-icon"></i>
-
-#### Privacy & Security Tools
-
-- **SDC Tools**: Statistical disclosure control
-- **Synthea**: Synthetic patient generator
-- **Privacy Audit Tools**: Compliance checking
-- **Differential Privacy Libraries**: Google, IBM
-- **Secure Computing Platforms**: Various options
-:::
-:::
-:::
-
-### 📊 Datasets for Practice
-
-::: {.resource-card}
-<i class="bi bi-database resource-icon"></i>
-
-#### Sample Datasets
-
-**DataSHIELD Test Data:**
-- **CNSIM**: Simulated cohort data (n=5,000)
-- **DASIM**: Disease analysis dataset
-- **SURVIVAL**: Time-to-event data
-
-**OMOP Sample Data:**
-- **Synthea OMOP**: 1K, 10K, 100K patient datasets
-- **CMS SynPUF**: Synthetic Medicare data
-- **MIMIC-OMOP**: Critical care data (requires DUA)
-
-**African Health Data:**
-- Workshop-specific datasets
-- Demographic health surveys (anonymized)
-- Disease surveillance samples
-:::
-
-### 🎯 Use Case Examples
-
-::: {.row}
-::: {.col-md-4}
-::: {.resource-card}
-<i class="bi bi-heart-pulse resource-icon"></i>
-
-#### Clinical Research
-- Multi-site RCTs
-- Observational studies
-- Pharmacovigilance
-- Comparative effectiveness
-:::
-:::
-
-::: {.col-md-4}
-::: {.resource-card}
-<i class="bi bi-virus resource-icon"></i>
-
-#### Public Health
-- Disease surveillance
-- Outbreak investigation
-- Health disparities
-- Policy evaluation
-:::
-:::
-
-::: {.col-md-4}
-::: {.resource-card}
-<i class="bi bi-graph-up resource-icon"></i>
-
-#### Health Economics
-- Cost-effectiveness
-- Resource utilization
-- Health outcomes
-- Economic modeling
-:::
-:::
-:::
-
-### 📱 Stay Connected
-
-::: {.resource-card}
-<i class="bi bi-envelope resource-icon"></i>
-
-#### Newsletter & Updates
-
-Subscribe to stay informed about:
-- New DataSHIELD releases
-- OMOP CDM updates
-- Training opportunities
-- Community events
-- Research highlights
-
-**Subscribe:** [workshop-updates@isglobal.org](mailto:workshop-updates@isglobal.org)
-:::
-
-### 🤝 Collaboration Opportunities
-
-::: {.row}
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-lightbulb resource-icon"></i>
-
-#### Research Networks
-
-- **International DataSHIELD Consortium**
-- **OHDSI Collaborative Network**
-- **African Health Data Network**
-- **EU Health Data Space**
-
-Join existing studies or propose new collaborations!
-:::
-:::
-
-::: {.col-md-6}
-::: {.resource-card}
-<i class="bi bi-award resource-icon"></i>
-
-#### Funding & Grants
-
-- Horizon Europe calls
-- NIH Big Data initiatives
-- Wellcome Trust programs
-- African research grants
-- Industry partnerships
-
-Resources for proposal writing available.
-:::
-:::
-:::
-
-### 📝 Citation & Attribution
-
-When using DataSHIELD or OMOP CDM in your research:
-
-::: {.callout-note}
-## How to Cite
-
-**DataSHIELD:**
-```
-Gaye A, et al. DataSHIELD: taking the analysis to the data, 
-not the data to the analysis. Int J Epidemiol. 2014;43(6):1929-44.
-```
-
-**OMOP CDM:**
-```
-Observational Health Data Sciences and Informatics (OHDSI) Collaborative. 
-The Book of OHDSI. 2021. Available from: https://ohdsi.github.io/TheBookOfOhdsi/
-```
-:::
+### Publications
+- [List of DataSHIELD publications](https://papers.datashield.org)
+- [dsOMOP paper](https://doi.org/10.1093/bioinformatics/btaf286)
 
 ---
 
 ::: {.text-center .mt-5}
-<a href="https://github.com/isglobal-brge/workshop_APHRC" class="btn btn-primary">
-<i class="bi bi-github"></i> Workshop Repository
-</a>
+<a href="workshop.qmd" class="btn btn-primary">Back to Workshop Content</a>
 <a href="contact.qmd" class="btn btn-secondary">Contact Instructors</a>
 :::
