--- a/index.qmd
+++ b/index.qmd
@@ -12,19 +12,19 @@ toc: false
         <img src="images/ahprc.jpg">
       </div>
       <div class="carousel-slide">
-        <img src="images/aphrc_logo.png">
+        <img src="images/ahprc.jpg">
       </div>
       <div class="carousel-slide">
-        <img src="images/brge_logo.png">
+        <img src="images/ahprc.jpg">
       </div>
       <div class="carousel-slide">
-        <img src="images/isglobal_logo.jpg">
+        <img src="images/ahprc.jpg">
       </div>
       <div class="carousel-slide">
-        <img src="images/aphrc_logo.png">
+        <img src="images/ahprc.jpg">
       </div>
       <div class="carousel-slide">
-        <img src="images/brge_logo.png">
+        <img src="images/ahprc.jpg">
       </div>
     </div>
   </div>
