--- a/DataSHIELD_workshop_APHRC_resources.Rmd
+++ b/DataSHIELD_workshop_APHRC_resources.Rmd
@@ -127,7 +127,167 @@ datashield.logout(conns)
 
 
 
-# Exercise
+# Exercise: CORDELIA Project Analysis
 
+We have a database from the CORDELIA Project (https://cordeliaproject.net/), which collects clinical, demographic, and laboratory information about participants in order to study cardiovascular and metabolic risk factors. The dataset contains the following variables:
 
-To be supplied
+- **cohorte** – Cohort (study group the subject belongs to)
+- **codigo** – Code / ID (unique identifier for each subject)
+- **fec_inc** – Date of inclusion (enrollment date in the study)
+- **edad** – Age
+- **sexo** – Sex (male/female)
+- **est_civ** – Marital status
+- **niv_cult** – Educational level
+- **act_fis** – Physical activity
+- **fumador** – Smoker (yes/no)
+- **HTA** – Hypertension (diagnosis)
+- **HTA_TTO** – Hypertension treatment (yes/no)
+- **hipercol** – Hypercholesterolemia (diagnosis)
+- **col_tto** – Cholesterol treatment (yes/no)
+- **diabetes** – Diabetes (diagnosis)
+- **diab_tto** – Diabetes treatment (yes/no)
+- **insulin** – Insulin treatment (yes/no)
+- **diab_ado_ins** – Diabetes treated with oral antidiabetics and insulin
+- **peso** – Weight (kg)
+- **talla** – Height (cm or m)
+- **cintura** – Waist circumference (cm)
+- **IMC** – Body Mass Index (BMI)
+- **FC** – Heart rate (beats per minute)
+- **PAS_1** – Systolic blood pressure (1st measurement)
+- **PAS_2** – Systolic blood pressure (2nd measurement)
+- **PAD_1** – Diastolic blood pressure (1st measurement)
+- **PAD_2** – Diastolic blood pressure (2nd measurement)
+- **col_tot** – Total cholesterol
+- **hdl** – HDL cholesterol
+- **ldl** – LDL cholesterol
+- **trig** – Triglycerides
+- **creat** – Creatinine
+- **filt_glomer** – Glomerular filtration rate (GFR)
+- **glu** – Blood glucose
+- **exitusSeg** – Death during follow-up (yes/no)
+- **FechaExit_Seg** – Date of death during follow-up
+- **filt_glomer_CKD** – Glomerular filtration rate classified for chronic kidney disease (CKD stages)
+- **HTA_tot** – Hypertension (overall variable, combining diagnosis/treatment)
+- **diabetes_tot** – Diabetes (overall variable, combining diagnosis/treatment)
+- **todeath** – Time to death (follow-up time until death)
+- **death** – Death (event indicator, yes/no)
+
+The data is stored on an Opal server within a project named `CORDELIA`, under the resource `cordelia45`, with access credentials provided as follows:
+
+- Server: "https://opal-demo.obiba.org"
+- User: "dsuser"
+- Password: "P@ssw0rd"
+
+## Tasks
+
+Complete the following tasks:
+
+1. Load the data into a DataSHIELD session
+2. Summarize the variable `IMC`
+3. Create a histogram of the variable `trig`
+4. Assess whether `diabetes` is associated with `hipercol`, `IMC`, `hdl` and `col_tot` in separate univariate models
+5. Estimate a multivariate model for the variable `diabetes`, including only those variables that were significant in the univariate models
+
+## Solution
+
+```{r cordelia_setup}
+# Load required libraries
+library(DSI)
+library(DSOpal)
+library(dsBaseClient)
+
+# Task 1: Load the data into a DataSHIELD session
+builder <- DSI::newDSLoginBuilder()
+builder$append(server = "cordelia_server",
+               url = "https://opal-demo.obiba.org",
+               user = "dsuser",
+               password = "P@ssw0rd",
+               resource = "CORDELIA.cordelia45",
+               profile = "default")
+
+logindata <- builder$build()
+conns <- datashield.login(logins = logindata, assign = TRUE, symbol = "res")
+
+# Convert resource to data frame
+datashield.assign.expr(conns, symbol = "cordelia", 
+                       expr = quote(as.resource.data.frame(res, strict = TRUE)))
+
+# Check that data is loaded
+ds.ls()
+```
+
+```{r cordelia_summary}
+# Task 2: Summarize the variable IMC
+ds.summary('cordelia$IMC')
+```
+
+```{r cordelia_histogram}
+# Task 3: Create a histogram of the variable trig
+ds.histogram('cordelia$trig', breaks = 30)
+```
+
+```{r cordelia_univariate}
+# Task 4: Univariate models for diabetes
+
+# First, ensure diabetes is a factor variable
+ds.asFactor('cordelia$diabetes', 'diabetes_factor')
+ds.asFactor('cordelia$hipercol', 'hipercol_factor')
+
+# Model 1: diabetes ~ hipercol
+model1 <- ds.glm(formula = "diabetes_factor ~ hipercol_factor", 
+                 data = "cordelia",
+                 family = "binomial")
+print("Model 1: Diabetes ~ Hypercholesterolemia")
+print(model1$coefficients)
+
+# Model 2: diabetes ~ IMC
+model2 <- ds.glm(formula = "diabetes_factor ~ IMC", 
+                 data = "cordelia",
+                 family = "binomial")
+print("Model 2: Diabetes ~ BMI")
+print(model2$coefficients)
+
+# Model 3: diabetes ~ hdl
+model3 <- ds.glm(formula = "diabetes_factor ~ hdl", 
+                 data = "cordelia",
+                 family = "binomial")
+print("Model 3: Diabetes ~ HDL")
+print(model3$coefficients)
+
+# Model 4: diabetes ~ col_tot
+model4 <- ds.glm(formula = "diabetes_factor ~ col_tot", 
+                 data = "cordelia",
+                 family = "binomial")
+print("Model 4: Diabetes ~ Total Cholesterol")
+print(model4$coefficients)
+```
+
+```{r cordelia_multivariate}
+# Task 5: Multivariate model
+# Based on the univariate results, include significant variables
+# (Note: In practice, you would check p-values from the univariate models)
+
+multivariate_model <- ds.glm(formula = "diabetes_factor ~ hipercol_factor + IMC + hdl + col_tot", 
+                             data = "cordelia",
+                             family = "binomial")
+
+print("Multivariate Model: Diabetes ~ Hypercholesterolemia + BMI + HDL + Total Cholesterol")
+print(multivariate_model$coefficients)
+```
+
+```{r cordelia_logout}
+# Logout from the DataSHIELD session
+datashield.logout(conns)
+```
+
+## Discussion
+
+This exercise demonstrates how to:
+
+1. Connect to an Opal server and load data from a resource
+2. Perform basic descriptive statistics on continuous variables
+3. Create visualizations while preserving privacy
+4. Conduct univariate and multivariate logistic regression analyses
+5. Assess risk factors for diabetes using real-world clinical data
+
+The CORDELIA dataset provides a rich example of how DataSHIELD can be used to analyze sensitive health data without accessing individual-level records, making it ideal for multi-site collaborative research on cardiovascular and metabolic risk factors.
