--- a/schedule.qmd
+++ b/schedule.qmd
@@ -2,9 +2,143 @@
 title: "Workshop Schedule"
 ---
 
-## Workshop Dates
+## Workshop Locations and Dates
+
+The DataSHIELD Without Borders workshop will be delivered at the following three institutions across Africa:
+
+::: {.table-responsive}
+| Dates | Institution | Location |
+|-------|-------------|----------|
+| **August 18–22, 2025** | African Population and Health Research Center (APHRC) | Nairobi, Kenya |
+| **August 25–27, 2025** | Douala General Hospital (DGH) | Douala, Cameroon |
+| **August 29–31, 2025** | Institut de Recherche en Santé, de Surveillance Epidémiologique et de Formation (IRESSEF) | Dakar, Senegal |
+: {.table .table-striped .table-hover}
+:::
+
+---
+
+## Daily Schedule
+
+<style>
+.schedule-table tr.day-separator td {
+  background-color: #e47200 !important;
+  color: white !important;
+  font-weight: bold;
+  text-align: center;
+  padding: 1rem;
+  font-size: 1.1rem;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  border-top: 3px solid #c86200 !important;
+  border-bottom: 3px solid #c86200 !important;
+}
+.schedule-table tr.day-header td:first-child {
+  background-color: #f8f9fa;
+  font-weight: bold;
+  border-left: 5px solid #e47200;
+  vertical-align: middle;
+}
+.schedule-table tbody tr:not(.day-separator) {
+  border-left: 1px solid #dee2e6;
+  border-right: 1px solid #dee2e6;
+}
+.schedule-table tbody tr:last-child td {
+  border-bottom: 2px solid #dee2e6;
+}
+/* Add spacing after each day section */
+.schedule-table tr:nth-child(6) td,
+.schedule-table tr:nth-child(11) td {
+  padding-bottom: 2rem !important;
+}
+/* Day 1 has light orange background */
+.schedule-table tbody tr:nth-child(2) td:first-child,
+.schedule-table tbody tr:nth-child(3) td,
+.schedule-table tbody tr:nth-child(4) td,
+.schedule-table tbody tr:nth-child(5) td {
+  background-color: rgba(228, 114, 0, 0.05);
+}
+/* Day 2 has light blue background */
+.schedule-table tbody tr:nth-child(7) td:first-child,
+.schedule-table tbody tr:nth-child(8) td,
+.schedule-table tbody tr:nth-child(9) td,
+.schedule-table tbody tr:nth-child(10) td {
+  background-color: rgba(23, 162, 184, 0.05);
+}
+/* Day 3 has light green background */
+.schedule-table tbody tr:nth-child(12) td:first-child,
+.schedule-table tbody tr:nth-child(13) td,
+.schedule-table tbody tr:nth-child(14) td,
+.schedule-table tbody tr:nth-child(15) td {
+  background-color: rgba(82, 183, 136, 0.05);
+}
+</style>
+
+::: {.table-responsive}
+<table class="table table-striped table-hover schedule-table">
+<thead>
+<tr>
+<th>Day</th>
+<th>Session</th>
+<th>Topics</th>
+</tr>
+</thead>
+<tbody>
+<tr class="day-separator">
+<td colspan="3">Day 1: Introduction to DataSHIELD</td>
+</tr>
+<tr class="day-header">
+<td rowspan="3"><strong>Day 1</strong><br><em>Introduction to DataSHIELD</em></td>
+<td><strong>Morning</strong></td>
+<td>• DSWB Overview<br>• Federated analysis, Learning, Pooled analysis and Meta analysis<br>• DataSHIELD architecture: client-server setup, disclosure control</td>
+</tr>
+<tr>
+<td><strong>Mid-Morning</strong></td>
+<td>• Using DataSHIELD interface in RStudio<br>• Connecting to Opal and loading tabular datasets<br>• Basic descriptive analyses, models, graphs using tables</td>
+</tr>
+<tr>
+<td><strong>Afternoon</strong></td>
+<td>Questions and Technical Support Discussions</td>
+</tr>
+<tr class="day-separator">
+<td colspan="3">Day 2: Resources and External Data</td>
+</tr>
+<tr class="day-header">
+<td rowspan="3"><strong>Day 2</strong><br><em>Resources and External Data</em></td>
+<td><strong>Morning</strong></td>
+<td>• Concept of resources in Opal (vs table-based data)<br>• Registering external resources (CSV, PostgreSQL)</td>
+</tr>
+<tr>
+<td><strong>Mid-Morning</strong></td>
+<td>• Performing aggregation and modeling using resource-based data</td>
+</tr>
+<tr>
+<td><strong>Afternoon</strong></td>
+<td>Questions and Technical Support Discussions</td>
+</tr>
+<tr class="day-separator">
+<td colspan="3">Day 3: OMOP CDM and dsOMOP</td>
+</tr>
+<tr class="day-header">
+<td rowspan="3"><strong>Day 3</strong><br><em>OMOP CDM and dsOMOP</em></td>
+<td><strong>Morning</strong></td>
+<td>• Introduction to OMOP CDM data model<br>• Tables, structure, and use cases</td>
+</tr>
+<tr>
+<td><strong>Mid-Morning</strong></td>
+<td>• dsOMOP architecture and prerequisites<br>• Setting up OMOP connections in Opal<br>• Federated analysis on OMOP databases</td>
+</tr>
+<tr>
+<td><strong>Afternoon</strong></td>
+<td>Questions and Technical Support Discussions</td>
+</tr>
+</tbody>
+</table>
+:::
+
+---
 
 ::: {.text-center .mt-5}
-<a href="workshop.qmd" class="btn btn-primary">View Workshop Content</a>
+<a href="getting-started.qmd" class="btn btn-primary">Pre-Workshop Setup</a>
+<a href="workshop.qmd" class="btn btn-secondary">View Workshop Content</a>
 <a href="resources.qmd" class="btn btn-secondary">Access Resources</a>
 :::
