--- a/DataSHIELD_workshop_APHRC_resources.Rmd
+++ b/DataSHIELD_workshop_APHRC_resources.Rmd
@@ -11,6 +11,10 @@ execute:
   error: true
 ---
 
+<a href="#" onclick="event.preventDefault(); fetch('https://raw.githubusercontent.com/isglobal-brge/workshop_DSWB/main/DataSHIELD_workshop_APHRC_resources.Rmd').then(response => response.blob()).then(blob => { const url = window.URL.createObjectURL(blob); const a = document.createElement('a'); a.style.display = 'none'; a.href = url; a.download = 'DataSHIELD_workshop_APHRC_resources.Rmd'; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); }); return false;" class="btn btn-primary btn-sm">
+<i class="bi bi-download"></i> Download this R Markdown file
+</a>
+
 # Analysis using the `resources`
 
 
