--- a/DataSHIELD_workshop_APHRC_tables.Rmd
+++ b/DataSHIELD_workshop_APHRC_tables.Rmd
@@ -10,6 +10,11 @@ execute:
   warning: false
   error: true
 ---
+
+<a href="#" onclick="event.preventDefault(); fetch('https://raw.githubusercontent.com/isglobal-brge/workshop_DSWB/main/DataSHIELD_workshop_APHRC_tables.Rmd').then(response => response.blob()).then(blob => { const url = window.URL.createObjectURL(blob); const a = document.createElement('a'); a.style.display = 'none'; a.href = url; a.download = 'DataSHIELD_workshop_APHRC_tables.Rmd'; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); }); return false;" class="btn btn-primary btn-sm">
+<i class="bi bi-download"></i> Download this R Markdown file
+</a>
+
 ### INFORMATION FOR NEWCOMERS TO RSTUDIO NOTEBOOKS: 
 
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
