--- a/datashield-presentation.qmd
+++ b/datashield-presentation.qmd
@@ -1,14 +1,14 @@
 ---
-title: "OMOP CDM Presentation"
+title: "DataSHIELD Presentation"
 ---
 
-## Introduction to the OMOP Common Data Model
+## Introduction to DataSHIELD
 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #f0f0f0; border: 1px solid #ddd; border-radius: 8px;">
   <iframe 
-    src="../dsomop_slides.pdf" 
+    src="../DATASHIELD_DSWB_workshop.pdf" 
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;"
-    title="OMOP CDM Presentation Slides">
+    title="DataSHIELD Presentation Slides">
   </iframe>
 </div>
 
@@ -20,20 +20,13 @@ If the embedded viewer doesn't work properly, you can download the slides using 
 ### Download Slides
 
 ::: {.text-center .mt-4}
-<a href="../dsomop_slides.pdf" download class="btn btn-primary">
+<a href="../DATASHIELD_DSWB_workshop.pdf" download class="btn btn-primary">
 <i class="bi bi-download"></i> Download Presentation (PDF)
 </a>
 :::
 
-### Useful resources
-
-- [The Book of OHDSI](https://ohdsi.github.io/TheBookOfOhdsi/)
-- [OMOP CDM Documentation](https://ohdsi.github.io/CommonDataModel/)
-- [OHDSI Forums](https://forums.ohdsi.org/)
-- [dsOMOP website](https://isglobal-brge.github.io/dsOMOP)
-
 ---
 
 ::: {.text-center .mt-5}
-<a href="dsomop.Rmd" class="btn btn-primary">Continue to the dsOMOP Workshop</a>
+<a href="DataSHIELD_workshop_APHRC_tables.Rmd" class="btn btn-primary">Continue to DataSHIELD Workshop</a>
 :::
