--- a/dsomop.Rmd
+++ b/dsomop.Rmd
@@ -5,6 +5,10 @@ format:
     code-copy: false
 ---
 
+<a href="#" onclick="event.preventDefault(); fetch('https://raw.githubusercontent.com/isglobal-brge/workshop_DSWB/main/dsomop.Rmd').then(response => response.blob()).then(blob => { const url = window.URL.createObjectURL(blob); const a = document.createElement('a'); a.style.display = 'none'; a.href = url; a.download = 'dsomop.Rmd'; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); }); return false;" class="btn btn-primary btn-sm">
+<i class="bi bi-download"></i> Download this R Markdown file
+</a>
+
 In this lesson, we will learn how to:
 
 - Set up the required dependencies and connect to a DataSHIELD server
