--- a/DataSHIELD_workshop_APHRC_tables.Rmd
+++ b/DataSHIELD_workshop_APHRC_tables.Rmd
@@ -695,5 +695,5 @@ Then, load the resources in R as data.frame’s using the functions available in
 - Is there any interaction between cholesterol and sex adjusted by bmi?
 
 <a href="#" onclick="event.preventDefault(); fetch('https://raw.githubusercontent.com/isglobal-brge/workshop_DSWB/main/Exercise_tables.R').then(response => response.blob()).then(blob => { const url = window.URL.createObjectURL(blob); const a = document.createElement('a'); a.style.display = 'none'; a.href = url; a.download = 'Exercise_tables.R'; document.body.appendChild(a); a.click(); window.URL.revokeObjectURL(url); }); return false;" class="btn btn-primary btn-sm">
-<i class="bi bi-download"></i> Download this R Markdown file
+<i class="bi bi-download"></i> Download the solution
 </a>
